--- a/_sass/minima/initialize.scss
+++ b/_sass/minima/initialize.scss
@@ -4,7 +4,7 @@
 
 $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Segoe UI Symbol", "Segoe UI Emoji", "Apple Color Emoji", Roboto, Helvetica, Arial, sans-serif !default;
 // ZCZC $base-font-size:   16px !default;
-$base-font-size:   24px !default;
+$base-font-size:   26px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
@@ -13,8 +13,8 @@ $spacing-unit:     30px !default;
 
 $table-text-align: left !default;
 
-// ZCZC
-// Width of the content area
+// ZCZC Width of the content area
+// ZCZC $content-width:    1080px !default;
 $content-width:    1080px !default;
 
 $on-palm:          600px !default;
