--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,7 +29,11 @@ layout: default
     </ul>
 
   {%- endif -%}
-
-   <br>Layouts:home.html
+  <hr>
+  <table style="width=100%"><tr>
+  <td><a href="https://extra192.vlsm.org">EXTRA 192</a></td>
+  <td><a href="https://github.com/UI-FASILKOM-OS/extra192">GitHub</a></td>
+  <td>Layouts:home.html</td>
+  </tr></table>
 </div>
 
