--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,8 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
+  <title>{{ site.title }}</title>
+  <meta name="description" content="Extra 2019-2 Operating Systems">
+  <meta name="author" content="Extra 2019-2 Team">
 </head>
+
